# RedisHelper

./: .dockerignore  .gitignore  Dockerfile  Gc.php  README.md  TODO.md  composer.json  fly.toml  index.html  package-lock.json  package.json  render.yaml  robots.txt  vite.config.ts
.trae/documents/: UI.md  design-decisions-doc-plan copy.md  dynamic-menu-text-plan.md  fix-tauri-integration-plan.md  redis_helper_tauri_plan.md  多选删除与废键箱功能.md  导出路径问题调查计划.md  弹框选择连接UI优化计划.md
.trae/documents/tweak/: api-integration-plan.md  browser-compatibility-plan.md  db-fully-loaded-memory.md  keys-pagination-plan.md  load-more-ux-improvement.md  multi-select-delete-plan.md  multi-window-tab-plan.md  search-options-design.md  server_config_ui_optimization_plan.md  user-help-doc-plan.md
.trae/documents/v1.2.0/: v1.2.0-feature-changes-analysis-plan.md  v1.2.0-feature-changes-analysis-report.md
.workbuddy/memory/: 2026-05-11.md
api/common/: redis.php
docs/: CODE_WIKI.md  DESIGN_DECISIONS.md  UI.md  design.md
help/: HELP.md
install/: LINUX.md  README.md
server/: ws-proxy.js
src-tauri/: Cargo.toml  tauri.capabilities.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: create_icons.py  gen_icons.py  gen_icons_rounded.py  icon.icns  round_icon.py
src-tauri/src/: main.rs
src-tauri/src/commands/: audit.rs  export.rs  mod.rs  redis.rs  server.rs  trash.rs
src-tauri/src/redis/: audit.rs  connection.rs  mod.rs
src-tauri/src/storage/: config.rs  mod.rs  trash.rs
src/frontend/: App.vue  env.d.ts  main.ts
www/: index.html
www/js/: main.js
(+20 files in other folders)
